6. `RegexMatch::match()` and `RegexReplace::replace()` function will no longer take any argument.


Version 10.28.12 - Sun Jan 22 10:34:35 UTC 2016
-----------------------------------------------

* Add match evaluator (close feature request #9)
* Improve getter functions


Version 10.28.11 - Mon Dec  5 09:58:35 UTC 2016
-----------------------------------------------

* Fix bug: Copy constructor of Regex class was performing an additional compilation even
		when the to-be-copied code was null, thus producing a wrong copy.


Version 10.28.09 - Sat Nov 19 13:16:37 UTC 2016
-----------------------------------------------

* For loop optimization (Thanks to David Carlier for noticing them.)

Version 10.28.08 - Fri Nov 18 00:49:26 UTC 2016
-----------------------------------------------

* Added `setMatchStartOffsetVector()`
* Added `setMatchEndOffsetVector()`
* Added `resetCharacterTables()`
* Added a #define to privide JPCRE2 version
* Added a typedef `jpcre2::VecOff`
* Removed `getEndOffset()`
* Removed `setLocale()`, `getLocale()` and `getLocaleTypeId()`
* Fixed a bug on Regex copy constructor (deleted character tables were being tried to be used).


Version 10.28.07 - Tue Nov 15 19:50:34 UTC 2016
-----------------------------------------------

* Fix `toString(int)` function for `C++98`
* Added a struct ConvInt
* Added a struct ConvUTF

Version 10.28.06 - Mon Nov 14 19:09:19 UTC 2016
-----------------------------------------------

* Fix memory leaks tracked by valgrind
* Fix some minor bugs
* Removed `jpcre2::ERROR::JIT_COMPILE_FAILED`
* Added `initMatchFrom()` and `initReplaceFrom()`
* Added `setNewLine()` and `getNewLine()`
* Fix `setLocale()`
* Added `getLocaleTypeId()`
* `PCRE2_SUBSTITUTE_OVERFLOW_LENGTH` can now be overridden.
* Overloads to pass subject, pattern and replacement strings with pointer.
* Added `getSubjectPointer()`, `getPatternPointer()` and `getReplaceWithPointer()`


Version 10.28.05 - Fri Nov 11 22:53:19 UTC 2016